# DAG_Workflow_Manager

./: .gitignore  LICENSE  README.md  default_workflow_config.json  member_data.csv  partitioned_input_file.parquet  performance_summary.json  plusgrade_performance_summary.json  plusgrade_workflow_result.csv  pyproject.toml  requirements.txt  task_workflow_config.json  workflow_result.csv  workflow_results.csv
.github/workflows/: python-app.yml
partitions/: partition_0.parquet  partition_1.parquet  partition_2.parquet  partition_3.parquet  partition_4.parquet  partition_5.parquet  partition_6.parquet  partition_7.parquet  partition_8.parquet  partition_9.parquet
plusgrade_env/: pyvenv.cfg
src/: __init__.py  app.py  dag_task_manager.py  exceptions.py  job_config.py  offer_ep.py  offer_functions.py  offer_workflow_functions.py  prediction_ep.py  run_workflow.py  task.py  workflow.py  workflow_factory.py
src/api/: app.py  member_features.py
src/tests/: test_extract.py  test_transform.py
src/user_functions/: offer_workflow_functions.py
src/workflow_management/: __init__.py  config.py  dag_task_manager.py  task.py  workflow.py  workflow_factory.py
tests/: test_extract.py  test_transform.py
tests/user_functions_test/: test_extract.py  test_transform.py
